# gear-autoselector

./: .gitignore  Dockerfile  README.md  app.py  docker-compose-gha.yml  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: code-quality.yml
etc/: start-server.sh
exchange_token/: apps.py  urls.py  views.py
exchange_token/templates/exchange_token/: index.html
gearselector/: asgi.py  settings.py  urls.py  wsgi.py
landing/: views.py
landing/templates/landing/: index.html
landing/templatetags/: landing_tags.py
selector/: apps.py  models.py
selector/management/commands/: backfill.py
selector/migrations/: 0001_initial.py  0002_alter_activity_activity_id_alter_auth_user_and_more.py
static/css/: styles.css
webhook/: models.py  urls.py  views.py
webhook/management/commands/: process_events.py
webhook/migrations/: 0001_initial.py  0002_subscription.py
